갤러리 추가 작업완료

--- a/css/wedding.css
+++ b/css/wedding.css
@@ -148,6 +148,7 @@ header {
 }
 
 .info {
+  overflow: hidden;
   margin-top: 3.2vw;
   padding: 0 12vw 10.66667vw;
 }
@@ -319,7 +320,7 @@ header {
 }
 
 .map__btn {
-  display: inline-block;
+  display: block;
   margin: 6.93333vw 0 3.46667vw;
   padding: 3.2vw 5.33333vw;
   font-size: 3.2vw;
@@ -328,6 +329,7 @@ header {
   color: #fff;
   text-decoration: none;
   border-radius: 6px;
+  text-align: center;
 }
 
 .map__box {
@@ -345,6 +347,12 @@ header {
   left: 0;
   right: 0;
   bottom: 0;
+}
+
+.map__area {
+  padding: 0 4.26667vw;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .schedule {
@@ -529,6 +537,31 @@ header {
   margin-top: 5.33333vw;
 }
 
+.gallery {
+  margin: 16vw 0 8vw;
+}
+
+.gallery__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.gallery__item {
+  overflow: hidden;
+  border-radius: 2.66667vw;
+}
+
+.gallery__item img {
+  width: 100%;
+  vertical-align: middle;
+}
+
+.gallery__box {
+  overflow: visible !important;
+  margin-top: 8vw;
+}
+
 @-webkit-keyframes scale {
   0% {
     -webkit-transform: scale(0.9);
@@ -609,243 +642,243 @@ header {
 }
 
 .shooting_star:nth-child(1) {
-  top: calc(50% - 118px);
-  left: calc(50% - 224px);
-  -webkit-animation-delay: 8123ms;
-          animation-delay: 8123ms;
+  top: calc(50% - -73px);
+  left: calc(50% - 81px);
+  -webkit-animation-delay: 7473ms;
+          animation-delay: 7473ms;
 }
 
 .shooting_star:nth-child(1)::before, .shooting_star:nth-child(1)::after {
-  -webkit-animation-delay: 8123ms;
-          animation-delay: 8123ms;
+  -webkit-animation-delay: 7473ms;
+          animation-delay: 7473ms;
 }
 
 .shooting_star:nth-child(2) {
-  top: calc(50% - -125px);
-  left: calc(50% - 3px);
-  -webkit-animation-delay: 5446ms;
-          animation-delay: 5446ms;
+  top: calc(50% - -129px);
+  left: calc(50% - 115px);
+  -webkit-animation-delay: 236ms;
+          animation-delay: 236ms;
 }
 
 .shooting_star:nth-child(2)::before, .shooting_star:nth-child(2)::after {
-  -webkit-animation-delay: 5446ms;
-          animation-delay: 5446ms;
+  -webkit-animation-delay: 236ms;
+          animation-delay: 236ms;
 }
 
 .shooting_star:nth-child(3) {
-  top: calc(50% - -65px);
-  left: calc(50% - 284px);
-  -webkit-animation-delay: 2054ms;
-          animation-delay: 2054ms;
+  top: calc(50% - 119px);
+  left: calc(50% - 279px);
+  -webkit-animation-delay: 7324ms;
+          animation-delay: 7324ms;
 }
 
 .shooting_star:nth-child(3)::before, .shooting_star:nth-child(3)::after {
-  -webkit-animation-delay: 2054ms;
-          animation-delay: 2054ms;
+  -webkit-animation-delay: 7324ms;
+          animation-delay: 7324ms;
 }
 
 .shooting_star:nth-child(4) {
-  top: calc(50% - 100px);
-  left: calc(50% - 73px);
-  -webkit-animation-delay: 6268ms;
-          animation-delay: 6268ms;
+  top: calc(50% - -127px);
+  left: calc(50% - 285px);
+  -webkit-animation-delay: 8071ms;
+          animation-delay: 8071ms;
 }
 
 .shooting_star:nth-child(4)::before, .shooting_star:nth-child(4)::after {
-  -webkit-animation-delay: 6268ms;
-          animation-delay: 6268ms;
+  -webkit-animation-delay: 8071ms;
+          animation-delay: 8071ms;
 }
 
 .shooting_star:nth-child(5) {
-  top: calc(50% - 102px);
-  left: calc(50% - 182px);
-  -webkit-animation-delay: 9444ms;
-          animation-delay: 9444ms;
+  top: calc(50% - -194px);
+  left: calc(50% - 79px);
+  -webkit-animation-delay: 9486ms;
+          animation-delay: 9486ms;
 }
 
 .shooting_star:nth-child(5)::before, .shooting_star:nth-child(5)::after {
-  -webkit-animation-delay: 9444ms;
-          animation-delay: 9444ms;
+  -webkit-animation-delay: 9486ms;
+          animation-delay: 9486ms;
 }
 
 .shooting_star:nth-child(6) {
-  top: calc(50% - -166px);
-  left: calc(50% - 155px);
-  -webkit-animation-delay: 3669ms;
-          animation-delay: 3669ms;
+  top: calc(50% - -189px);
+  left: calc(50% - 252px);
+  -webkit-animation-delay: 8609ms;
+          animation-delay: 8609ms;
 }
 
 .shooting_star:nth-child(6)::before, .shooting_star:nth-child(6)::after {
-  -webkit-animation-delay: 3669ms;
-          animation-delay: 3669ms;
+  -webkit-animation-delay: 8609ms;
+          animation-delay: 8609ms;
 }
 
 .shooting_star:nth-child(7) {
-  top: calc(50% - -136px);
-  left: calc(50% - 291px);
-  -webkit-animation-delay: 9351ms;
-          animation-delay: 9351ms;
+  top: calc(50% - 20px);
+  left: calc(50% - 205px);
+  -webkit-animation-delay: 3797ms;
+          animation-delay: 3797ms;
 }
 
 .shooting_star:nth-child(7)::before, .shooting_star:nth-child(7)::after {
-  -webkit-animation-delay: 9351ms;
-          animation-delay: 9351ms;
+  -webkit-animation-delay: 3797ms;
+          animation-delay: 3797ms;
 }
 
 .shooting_star:nth-child(8) {
-  top: calc(50% - 191px);
-  left: calc(50% - 43px);
-  -webkit-animation-delay: 5832ms;
-          animation-delay: 5832ms;
+  top: calc(50% - 152px);
+  left: calc(50% - 209px);
+  -webkit-animation-delay: 2508ms;
+          animation-delay: 2508ms;
 }
 
 .shooting_star:nth-child(8)::before, .shooting_star:nth-child(8)::after {
-  -webkit-animation-delay: 5832ms;
-          animation-delay: 5832ms;
+  -webkit-animation-delay: 2508ms;
+          animation-delay: 2508ms;
 }
 
 .shooting_star:nth-child(9) {
-  top: calc(50% - 24px);
-  left: calc(50% - 273px);
-  -webkit-animation-delay: 7199ms;
-          animation-delay: 7199ms;
+  top: calc(50% - 44px);
+  left: calc(50% - 44px);
+  -webkit-animation-delay: 1075ms;
+          animation-delay: 1075ms;
 }
 
 .shooting_star:nth-child(9)::before, .shooting_star:nth-child(9)::after {
-  -webkit-animation-delay: 7199ms;
-          animation-delay: 7199ms;
+  -webkit-animation-delay: 1075ms;
+          animation-delay: 1075ms;
 }
 
 .shooting_star:nth-child(10) {
-  top: calc(50% - 189px);
-  left: calc(50% - 23px);
-  -webkit-animation-delay: 5241ms;
-          animation-delay: 5241ms;
+  top: calc(50% - 193px);
+  left: calc(50% - 205px);
+  -webkit-animation-delay: 4404ms;
+          animation-delay: 4404ms;
 }
 
 .shooting_star:nth-child(10)::before, .shooting_star:nth-child(10)::after {
-  -webkit-animation-delay: 5241ms;
-          animation-delay: 5241ms;
+  -webkit-animation-delay: 4404ms;
+          animation-delay: 4404ms;
 }
 
 .shooting_star:nth-child(11) {
-  top: calc(50% - 33px);
-  left: calc(50% - 262px);
-  -webkit-animation-delay: 7482ms;
-          animation-delay: 7482ms;
+  top: calc(50% - -96px);
+  left: calc(50% - 91px);
+  -webkit-animation-delay: 6709ms;
+          animation-delay: 6709ms;
 }
 
 .shooting_star:nth-child(11)::before, .shooting_star:nth-child(11)::after {
-  -webkit-animation-delay: 7482ms;
-          animation-delay: 7482ms;
+  -webkit-animation-delay: 6709ms;
+          animation-delay: 6709ms;
 }
 
 .shooting_star:nth-child(12) {
-  top: calc(50% - -24px);
-  left: calc(50% - 22px);
-  -webkit-animation-delay: 6793ms;
-          animation-delay: 6793ms;
+  top: calc(50% - -12px);
+  left: calc(50% - 215px);
+  -webkit-animation-delay: 1290ms;
+          animation-delay: 1290ms;
 }
 
 .shooting_star:nth-child(12)::before, .shooting_star:nth-child(12)::after {
-  -webkit-animation-delay: 6793ms;
-          animation-delay: 6793ms;
+  -webkit-animation-delay: 1290ms;
+          animation-delay: 1290ms;
 }
 
 .shooting_star:nth-child(13) {
-  top: calc(50% - 2px);
-  left: calc(50% - 290px);
-  -webkit-animation-delay: 461ms;
-          animation-delay: 461ms;
+  top: calc(50% - 93px);
+  left: calc(50% - 266px);
+  -webkit-animation-delay: 2726ms;
+          animation-delay: 2726ms;
 }
 
 .shooting_star:nth-child(13)::before, .shooting_star:nth-child(13)::after {
-  -webkit-animation-delay: 461ms;
-          animation-delay: 461ms;
+  -webkit-animation-delay: 2726ms;
+          animation-delay: 2726ms;
 }
 
 .shooting_star:nth-child(14) {
-  top: calc(50% - 165px);
-  left: calc(50% - 212px);
-  -webkit-animation-delay: 3874ms;
-          animation-delay: 3874ms;
+  top: calc(50% - -78px);
+  left: calc(50% - 160px);
+  -webkit-animation-delay: 7078ms;
+          animation-delay: 7078ms;
 }
 
 .shooting_star:nth-child(14)::before, .shooting_star:nth-child(14)::after {
-  -webkit-animation-delay: 3874ms;
-          animation-delay: 3874ms;
+  -webkit-animation-delay: 7078ms;
+          animation-delay: 7078ms;
 }
 
 .shooting_star:nth-child(15) {
-  top: calc(50% - -129px);
-  left: calc(50% - 299px);
-  -webkit-animation-delay: 3714ms;
-          animation-delay: 3714ms;
+  top: calc(50% - 116px);
+  left: calc(50% - 93px);
+  -webkit-animation-delay: 7233ms;
+          animation-delay: 7233ms;
 }
 
 .shooting_star:nth-child(15)::before, .shooting_star:nth-child(15)::after {
-  -webkit-animation-delay: 3714ms;
-          animation-delay: 3714ms;
+  -webkit-animation-delay: 7233ms;
+          animation-delay: 7233ms;
 }
 
 .shooting_star:nth-child(16) {
-  top: calc(50% - 13px);
-  left: calc(50% - 183px);
-  -webkit-animation-delay: 9659ms;
-          animation-delay: 9659ms;
+  top: calc(50% - 161px);
+  left: calc(50% - 46px);
+  -webkit-animation-delay: 4990ms;
+          animation-delay: 4990ms;
 }
 
 .shooting_star:nth-child(16)::before, .shooting_star:nth-child(16)::after {
-  -webkit-animation-delay: 9659ms;
-          animation-delay: 9659ms;
+  -webkit-animation-delay: 4990ms;
+          animation-delay: 4990ms;
 }
 
 .shooting_star:nth-child(17) {
-  top: calc(50% - 154px);
-  left: calc(50% - 52px);
-  -webkit-animation-delay: 1973ms;
-          animation-delay: 1973ms;
+  top: calc(50% - -169px);
+  left: calc(50% - 82px);
+  -webkit-animation-delay: 5496ms;
+          animation-delay: 5496ms;
 }
 
 .shooting_star:nth-child(17)::before, .shooting_star:nth-child(17)::after {
-  -webkit-animation-delay: 1973ms;
-          animation-delay: 1973ms;
+  -webkit-animation-delay: 5496ms;
+          animation-delay: 5496ms;
 }
 
 .shooting_star:nth-child(18) {
-  top: calc(50% - 190px);
-  left: calc(50% - 120px);
-  -webkit-animation-delay: 3278ms;
-          animation-delay: 3278ms;
+  top: calc(50% - 2px);
+  left: calc(50% - 146px);
+  -webkit-animation-delay: 5867ms;
+          animation-delay: 5867ms;
 }
 
 .shooting_star:nth-child(18)::before, .shooting_star:nth-child(18)::after {
-  -webkit-animation-delay: 3278ms;
-          animation-delay: 3278ms;
+  -webkit-animation-delay: 5867ms;
+          animation-delay: 5867ms;
 }
 
 .shooting_star:nth-child(19) {
-  top: calc(50% - 110px);
-  left: calc(50% - 290px);
-  -webkit-animation-delay: 139ms;
-          animation-delay: 139ms;
+  top: calc(50% - 182px);
+  left: calc(50% - 267px);
+  -webkit-animation-delay: 7996ms;
+          animation-delay: 7996ms;
 }
 
 .shooting_star:nth-child(19)::before, .shooting_star:nth-child(19)::after {
-  -webkit-animation-delay: 139ms;
-          animation-delay: 139ms;
+  -webkit-animation-delay: 7996ms;
+          animation-delay: 7996ms;
 }
 
 .shooting_star:nth-child(20) {
-  top: calc(50% - -87px);
-  left: calc(50% - 68px);
-  -webkit-animation-delay: 4590ms;
-          animation-delay: 4590ms;
+  top: calc(50% - 123px);
+  left: calc(50% - 217px);
+  -webkit-animation-delay: 8274ms;
+          animation-delay: 8274ms;
 }
 
 .shooting_star:nth-child(20)::before, .shooting_star:nth-child(20)::after {
-  -webkit-animation-delay: 4590ms;
-          animation-delay: 4590ms;
+  -webkit-animation-delay: 8274ms;
+          animation-delay: 8274ms;
 }
 
 @-webkit-keyframes tail {
